# RPO_BMSTU

./: README.md
backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/front/src/: App.css  App.js  index.js
backend/front/src/Utils/: Rdx.jsx  Utils.jsx
backend/front/src/components/: Alert.jsx  AnotherHome.jsx  CountryComponent.jsx  CountryListComponent.jsx  Home.jsx  Login.jsx  MyAccountComponent.jsx  NavigationBarClass.jsx  PaginationComponent.jsx  SideBar.jsx
backend/front/src/services/: BackendService.jsx
backend/frontend/: package.json
backend/frontend/src/: App.css  App.js  index.js
backend/frontend/src/components/: Alert.jsx  ArtistComponent.jsx  ArtistListComponent.jsx  CountryListComponent.jsx  Login.jsx  MuseumListComponent.jsx  NavigationBar.jsx  PaginationComponent.jsx  PaintingComponent.jsx  PaintingListComponent.jsx  UserListComponent.jsx
backend/frontend/src/redux/: actionCreators.js
backend/frontend/src/redux/reducers/: alert.js  auth.js
backend/frontend/src/services/: BackendService.js
backend/frontend/src/utils/: utils.js
backend/src/main/java/ru/iu3/backend/: BackendApplication.java
backend/src/main/resources/: application.properties
fclient/: settings.gradle
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: ids.xml  strings.xml  themes.xml
fclient/app/src/main/res/values-night/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
frontend/: package-lock.json
frontend/src/: App.css  App.js
frontend/src/components/: CountryComponent.jsx  Home.jsx  MuseumComponent.jsx  MyAccountComponent.jsx  PaintingListComponent.jsx  SideBar.jsx  UserComponent.jsx
frontend/src/redux/: actionCreators.js  index.js
frontend/src/redux/reducers/: index.js
frontend/src/services/: BackendService.js
frontend/src/utils/: countryController.js
lab/: settings.gradle
lab/app/: build.gradle
lab/app/src/main/: AndroidManifest.xml
lab/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
lab/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
lab/app/src/main/res/values/: strings.xml  themes.xml
lab/app/src/main/res/values-night/: themes.xml
lab/gradle/wrapper/: gradle-wrapper.properties
(+36 files in other folders)
